future Iterator implementation